add header and middle html and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="middle.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,16 +23,17 @@
     <section class="header">
       <div class="part-1">
         <div class="info-part-1">
-        <h2>We&#39;ve got you Covered.</h2>
-        <p class="information">
-          Together we keep each other safe at home or at work. By paying a tiny
-          fee a day, you are fully insured all day long. You get it all for as
-          little as <span class="extra-information">&#36;0.4 per pay</span>
-        </p>
-      </div>
+          <h2>We&#39;ve got you Covered.</h2>
+          <p class="information">
+            Together we keep each other safe at home or at work. By paying a
+            tiny fee a day, you are fully insured all day long. You get it all
+            for as little as
+            <span class="extra-information">&#36;0.4 per pay</span>
+          </p>
+        </div>
         <div class="button-image">
-        <button class="button">Join now</button>
-        <img class="image" src="./img/family.png" />
+          <button class="button">Join now</button>
+          <img class="image" src="./img/family.png" />
         </div>
       </div>
       <div class="part-2">
@@ -40,6 +43,81 @@
       <div class="part-3">
         <p class="info-part-3">What are you waiting for?</p>
         <a class="info-link" href="#">Join today</a>
+      </div>
+    </section>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#">Our offer</a>
+      <a href="#">Why us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <section class="middle-part">
+      <div class="item1">
+        <h1>Your personal financial safety net online.</h1>
+        <button class="join-button">JOIN NOW</button>
+      </div>
+      <div class="item2">
+        <div class="info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+            temporibus hic iusto necessitatibus blanditiis itaque voluptates
+            expedita exercitationem maiores, quas commodi suscipit sit, odit
+            eius? Totam accusamus magni dolorum sunt. maiores, quas commodi
+            suscipit sit, odit eius? Totam accusamus magni dolorum sunt.
+          </p>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="card1">
+          <div class="card-img">
+            <img src="img/child.png" alt="kid wearing a baseball hat" />
+          </div>
+          <h1>Children</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+            temporibus hic iusto necessitatibus blanditiis itaque voluptates
+            expedita exercitationem maiores, quas commodi
+          </p>
+        </div>
+        <div class="card2">
+          <div class="card-img">
+            <img src="img/adult.png" alt="an adult person" />
+          </div>
+          <h1>Just right</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+            temporibus hic iusto necessitatibus blanditiis itaque voluptates
+            expedita exercitationem maiores, quas commodi
+          </p>
+        </div>
+        <div class="card3">
+          <div class="card-img">
+            <img src="img/old.png" alt="old man in a uniform" />
+          </div>
+          <h1>Old fart</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+            temporibus hic iusto necessitatibus blanditiis itaque voluptates
+            expedita exercitationem maiores, quas commodi
+          </p>
+        </div>
+      </div>
+      <div class="item3">
+        <div class="info">
+          <h1>About us</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
+            quo maiores sunt, ipsa dolorum repellendus vitae. Tempora iusto
+            minima laboriosam velit, provident labore dolorum dicta non qui sed
+            voluptatibus repudiandae.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+            delectus nihil, provident amet officia omnis porro vel error hic,
+            dolores maiores rem? Voluptatum eos dicta sit, quod ducimus
+            excepturi consequuntur!
+          </p>
+        </div>
       </div>
     </section>
   </body>
