--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="nav.css" />
     <link rel="stylesheet" href="middle.css" />
+    <link rel="stylesheet" href="bottom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Frank+Ruhl+Libre:wght@500&family=Kaushan+Script&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Document</title>
   </head>
   <body>
@@ -113,12 +115,43 @@
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-            delectus nihil, provident amet officia omnis porro vel error hic,
-            dolores maiores rem? Voluptatum eos dicta sit, quod ducimus
-            excepturi consequuntur!
+            delectus nihil
           </p>
         </div>
       </div>
     </section>
+    <section class="bottom-part">
+        <div class="item0">
+          <h1>How<br />it works?</h1>
+        </div>
+        <div class="item1">
+          <h1>01</h1>
+          <p>Answer a few quesions<br />about yourself.</p>
+        </div>
+        <div class="item2">
+          <h1>02</h1>
+          <p>Choose a plan.<br />Get a quote.</p>
+        </div>
+        <div class="item3">
+          <h1>03</h1>
+          <p>Answer some questions about<br />your medical history.</p>
+        </div>
+        <div class="item4">
+          <h1>04</h1>
+          <p>Wait 90 sec to get approved.</p>
+        </div>
+        <div class="item5">
+          <h1>05</h1>
+          <p>Done!</p>
+        </div>
+    </section>
+    <footer>
+        <div class="up-arrow">
+          <span class="material-symbols-outlined">
+            arrow_upward
+            </span>
+            <a href="#top">Take me up again!</a>
+        </div>
+    </footer>
   </body>
 </html>
