--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Insurance Project - Contact</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link rel="stylesheet" href="style/contact.css" />
+  </head>
+  <body>
+    <section class="header">
+      <h1>Oh hello there!</h1>
+      <img
+        class="man-baby"
+        src="img/man-baby.png"
+        alt="man with a baby on his head"
+      />
+    </section>
+    <nav>
+      <a class="nav home" href="index.html">Home</a>
+      <a class="nav offer" href="#">Our offer</a>
+      <a class="nav why" href="#">Why us</a>
+      <a class="nav contact" href="contact.html">Contact</a>
+    </nav>
+  </body>
 </html>
